fix: adjust styling for crypto payment text for improved readability

--- a/src/App.css
+++ b/src/App.css
@@ -1786,6 +1786,11 @@ button:hover::after {
     justify-content: center;
   }
 
+    .payment-crypto-payment p {
+      margin: 0.8rem 0;
+      font-size: 0.5rem;
+    }
+
   .payment-content {
     min-width: 214px;
   }
